--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,11 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  overflow: scroll;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .footer {
